tests/macros/editor/plugin.stderr
error: option `plugin` does not exist for kind `editor`
 --> $DIR/plugin.rs:2:44
  |
2 |     let q = requestty::questions![Editor { plugin: todo!() }];
  |                                            ^^^^^^
