tests/macros/editor/plugin.rs
fn main() {
    let q = requestty::questions![Editor { plugin: todo!() }];
}
